// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-02-03",
  "name": "CAS2 accommodation of 13 weeks or more",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-07-31",
  "name": "CAS3",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a No type accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-05-23",
  "name": "Unknown",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-09-10",
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "CAS2 accommodation of 13 weeks or more",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2026-02-03",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "CAS3",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2026-07-31",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a No type accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "Unknown",
  "settledTag": undefined,
  "startDate": "2026-05-23",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2026-09-10",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;

exports[`cases utilities actionsCell macro renders a formatted cell for a given list of actions 1`] = `
"
    <span class="sas-case-list__cell-header" aria-hidden="true">Actions</span>

    <ul class="govuk-list">
        <li>Action 1</li>
        <li>Action 2</li>
    </ul>
  "
`;

exports[`cases utilities actionsCell macro renders an empty cell when no actions are provided 1`] = `""`;

exports[`cases utilities personCell macro renders a formatted cell for a given person 1`] = `
"<span class="sas-case-list__cell-header" aria-hidden="true">Person</span>

  <div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2">
      <a
        class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold"
        href="/cases/C321654"
        >Dave Foo</a
      >
    </div>

    <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
      <div class="sas-risk-tag sas-risk-tag--very-high">
    <dt>RoSH</dt>
    <dd>Very high</dd>
  </div>
      <div class="sas-risk-tag sas-risk-tag--tier">
        <dt>Tier</dt>
        <dd>B2</dd>
      </div>
    </dl>

    <dl class="sas-person-details govuk-!-margin-0">
      <div>
        <dt>Date of birth</dt>
        <dd>9 October 1980 (45)</dd>
      </div>
      <div>
        <dt>CRN</dt>
        <dd>C321654</dd>
      </div>
      <div>
        <dt>Prison number</dt>
        <dd>A1234BC</dd>
      </div>
    </dl>
  </div>"
`;
